<!--
  ~ JBoss, Home of Professional Open Source
  ~ Copyright 2018, Red Hat, Inc., and individual contributors
  ~ by the @authors tag. See the copyright.txt in the distribution for a
  ~ full listing of individual contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.eclipse.ee4j</groupId>
		<artifactId>project</artifactId>
		<version>1.0.5</version>
	</parent>

	<groupId>jakarta.enterprise</groupId>
	<artifactId>jakarta.enterprise.cdi-api</artifactId>
	<packaging>jar</packaging>
	<version>2.0.2</version>

	<name>Jakarta CDI</name>
	<description>APIs for Jakarta CDI (Contexts and Dependency Injection)</description>

	<url>http://cdi-spec.org</url>
	<licenses>
		<license>
			<name>Apache License 2.0</name>
			<url>https://repository.jboss.org/licenses/apache-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/eclipse-ee4j/cdi/issues</url>
	</issueManagement>

	<organization>
		<name>Eclipse Foundation</name>
		<url>https://jakarta.ee</url>
	</organization>

	<inceptionYear>2008</inceptionYear>

	<developers>
		<developer>
			<name>Antoine Sabot-Durand</name>
			<id>asabotdu</id>
			<timezone>CET</timezone>
			<organization>Red Hat Inc.</organization>
			<roles>
				<role>Specfication Lead</role>
			</roles>
			<email>asd[at]redhat[dot]com</email>
		</developer>

		<developer>
			<name>Martin Kouba</name>
			<id>mkouba</id>
			<organization>Red Hat Inc.</organization>
			<roles>
				<role>RI tech lead</role>
			</roles>
			<email>mkouba[at]redhat[dot]com</email>
		</developer>

		<developer>
			<name>Tomas Remes</name>
			<id>tremes</id>
			<organization>Red Hat Inc.</organization>
			<roles>
				<role>TCK tech lead</role>
			</roles>
			<email>tremes[at]redhat[dot]com</email>
		</developer>

		<developer>
			<name>Mark Struberg</name>
			<id>mstruberg</id>
			<timezone>CET</timezone>
			<roles>
				<role>Implementation developer</role>
			</roles>
			<email>struberg[at]yahoo[dot]de</email>
		</developer>

		<developer>
			<name>John D. Ament</name>
			<id>johndament</id>
			<organization>Independent</organization>
			<timezone>EST</timezone>
			<roles>
				<role>EG Member</role>
			</roles>
			<email>johndament[at]apache[dot]org</email>
		</developer>

		<developer>
			<name>Matej Novotny</name>
			<id>manovotn</id>
			<organization>Red Hat Inc.</organization>
			<roles>
				<role>TCK and RI developer</role>
			</roles>
			<email>manovotn[at]redhat[dot]com</email>
		</developer>

		<developer>
			<name>Mark Paluch</name>
			<id>mp911de</id>
			<organization>Independent</organization>
			<timezone>CET</timezone>
			<roles>
				<role>EG Member</role>
			</roles>
			<email>mpaluch[at]paluch[dot]biz</email>
		</developer>

	</developers>


	<properties>
		<atinject.api.version>1.0</atinject.api.version>
		<uel.api.version>3.0.3</uel.api.version>
		<interceptor.api.version>1.2.5</interceptor.api.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven-bundle-plugin.version>2.5.4</maven-bundle-plugin.version>
		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<!-- Configure all dependencies (e.g. testing) -->
	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>6.8.8</version>
			</dependency>

			<dependency>
				<groupId>jakarta.inject</groupId>
				<artifactId>jakarta.inject-api</artifactId>
				<version>${atinject.api.version}</version>
			</dependency>

			<dependency>
				<groupId>jakarta.el</groupId>
				<artifactId>jakarta.el-api</artifactId>
				<version>${uel.api.version}</version>
			</dependency>

			<dependency>
				<groupId>jakarta.interceptor</groupId>
				<artifactId>jakarta.interceptor-api</artifactId>
				<version>${interceptor.api.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>jakarta.el</groupId>
			<artifactId>jakarta.el-api</artifactId>
		</dependency>

		<dependency>
			<groupId>jakarta.interceptor</groupId>
			<artifactId>jakarta.interceptor-api</artifactId>
		</dependency>

		<dependency>
			<groupId>jakarta.inject</groupId>
			<artifactId>jakarta.inject-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<scm>
		<connection>scm:git:git@github.com:cdi-spec/cdi.git</connection>
		<url>scm:git:git@github.com:cdi-spec/cdi.git</url>
		<developerConnection>scm:git:git@github.com:cdi-spec/cdi.git</developerConnection>
	</scm>

	<build>
		<testResources>
			<testResource>
				<filtering>true</filtering>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>${maven-bundle-plugin.version}</version>
				<executions>
					<execution>
						<id>bundle-manifest</id>
						<phase>process-classes</phase>
						<goals>
							<goal>manifest</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<instructions>
						<Export-Package>
							javax.decorator;version=2.0,
							javax.enterprise.*;version=2.0,
						</Export-Package>
						<Import-Package>
							javax.el; version=2.2,
							*
						</Import-Package>
					</instructions>
				</configuration>
			</plugin>
			<!-- Add the OSGi Manifest to the main jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<executions>
					<execution>
						<id>default-test</id>
						<configuration>
							<systemPropertyVariables>
								<serviceDir>${project.build.testOutputDirectory}/META-INF/services/</serviceDir>
							</systemPropertyVariables>
							<excludes>
								<exclude>**/privileged/**</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>privileged-test</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<systemPropertyVariables>
								<serviceDir>${project.build.testOutputDirectory}/META-INF/services/</serviceDir>
							</systemPropertyVariables>
							<includes>
								<include>**/privileged/**</include>
							</includes>
							<argLine>-Djava.security.manager -Djava.security.policy=${project.build.testOutputDirectory}/java.policy</argLine>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<docfilessubdirs>true</docfilessubdirs>
					<description>Jakarta Context Dependency Injection API</description>
					<doctitle>Jakarta Context Dependency Injection API</doctitle>
					<windowtitle>Jakarta Context Dependency Injection API</windowtitle>
					<header><![CDATA[<br>Jakarta Context Dependency Injection ${project.version}]]>
					</header>
					<bottom><![CDATA[
Comments to: <a href="mailto:cdi-dev@eclipse.org">cdi-dev@eclipse.org</a>.<br>
Copyright &#169; 2019 Eclipse Foundation.<br>
Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">license terms</a>.]]>
					</bottom>
				</configuration>

				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
